Minor improvements. Cleaned up a test that was failing. Made some changes to the pom.xml so it's cleaner and builds properly. Removed deprecated features from pom.